--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* styles.css */
 
-.header, 
-.footer {
+.header {
     display: flex;
     background-color: #1F2937;
     padding: 3vh;
@@ -19,8 +18,6 @@ h2,
     display: flex;
     flex-direction: row;
     justify-content: center;
-    flex-shrink: 0;
-    flex-grow: 1;
     font-size: 36px;
     font-weight: 900;
     color: #1F2937;
@@ -31,7 +28,16 @@ h3 {
     color: #F9FAF8;  
 }
 
-h4 {
+.ctatext {
+    margin-bottom:0;
+    font-size: 22px;
+    font-weight: 700;
+    color: #F9FAF8;
+    display: flex;
+}
+
+
+h6 {
     font-size: 36px;
     font-weight: 200;
     font-style: italic;
@@ -39,6 +45,7 @@ h4 {
 }
 
 p {
+    margin-top:0;
     color: #F9FAF8;  
 }
 
@@ -74,11 +81,38 @@ p {
 .sectiontwo {
     display: flex;
     flex-flow: column wrap;
-    background-color: #E5E7EB;}
+    justify-content: center;
+    align-items: flex-end;
+    background-color: #E5E7EB;
+    padding-left: 29em;
+    padding-right: 27em;
+    padding-bottom: 75px;
+    padding-top: 50px;
+}
 
 .sectionthree {
+   display: flex;
+   padding: 125px;
+}
+
+.bluesquare {
     display: flex;
-    flex-direction: row wrap;
+    justify-content: center;
+    align-items: center;
+    width: 1400px;
+    height: 150px;
+    margin-left: 75px;
+    border-radius: 1em 1em;
+    flex-direction: column wrap;
+    background-color: #3882F6;
+} 
+
+.footer {
+    display: flex;
+    background-color: #1F2937;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
 }
 
 .signup {
@@ -91,10 +125,17 @@ p {
 }
 
 .signupp {
+    display: flex;
+    flex-flow: row wrap;
     background-color: #3882F6;
-    font-size: 12px;
-    padding: 0.5em 1em;
-    border-radius: 1em;
+    color: #F9FAF8;
+    font-size: 18px;
+    padding: 0.5em 2em;
+    border-radius: 0.5em;
+    border-color: white;
+    border-style: solid;
+    margin-left: 450px;
+    margin-right: -100px;
 }
 
 .pictures {
